--- a/extra_work/index.html
+++ b/extra_work/index.html
@@ -11,7 +11,14 @@
 	<h1>All Saints High School</h1>
 	<p>Hello, World!</p>
 	<img src="https://www.ctvnews.ca/polopoly_fs/1.2564722.1442351898!/httpImage/image.jpg_gen/derivatives/landscape_620/image.jpg" alt="all_saints" height="200" width="300">
-  <p>Here is an image ofe the high school.<br></p>
+  <p>Here is an image of the high school.<br></p>
   <p>Here is the website of <a href="http://ash.ocsb.ca/">All Saints</a></p>
+  <button>hello world button</button>
+  <ul>Extensive facilities include:<br>
+    <li>Chapel</li>
+    <li>2 large gyms</li>
+    <li>4 computer labs</li>
+    <li>7 science labs</li>
+  </ul>
 </body>
 </html>
